# NewtonFramework

./: .gitignore  CMakeLists.txt  README.md
docs/: basics.md  events.md  inputs.md  menubar.md  modules.md  utils.md  windows.md
example/: CMakeLists.txt
example/src/: events.h  global.h  main.cpp  testmodule.cpp  testmodule.h  testwindow.cpp  testwindow.h
include/: NewtonFramework.h
include/core/: desktopwindow.h  type.h  version.h  window.h
include/imgui/: imguiwindow.h  windowmanager.h  wprofiler.h
include/modules/time/: time.h
include/utils/events/: event.h
include/utils/input/: input.h
include/utils/logging/: consolesink.h  logger.h  sink.h
releases/: newton_framework_0_0_1_linux
releases/NewtonFramework_0_0_1/include/core/: application.h
releases/NewtonFramework_0_0_1/include/imgui/: menubar.h
releases/NewtonFramework_0_0_1/include/tools/: profiler.h
releases/NewtonFramework_0_0_1/include/utils/events/: eventbus.h
releases/NewtonFramework_0_0_1/include/utils/logging/: stdoutsink.h
src/core/: application.cpp  desktopwindow.cpp  module.h  modulestack.cpp  modulestack.h
src/imgui/: imguiwindow.cpp  menubar.cpp  windowmanager.cpp  wlogs.cpp  wlogs.h  wprofiler.cpp
src/modules/gui/: imgui.cpp  imgui.h
src/modules/time/: time.cpp
src/rendering/: baserenderer.cpp  baserenderer.h
src/tools/: profiler.cpp
src/utils/events/: event.cpp
src/utils/input/: input.cpp  inputcodes.h
src/utils/logging/: consolesink.cpp  logdata.h  logger.cpp  loggermacros.h  stdoutsink.cpp
